30-tools/farid/service.yml
apiVersion: v1
kind: Service
metadata:
  name: farid
spec:
  selector:
    app: farid
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
